--- a/_layouts/defaults.html
+++ b/_layouts/defaults.html
@@ -14,7 +14,6 @@
 
     <header>
       <div class="container">
-          <h1>"asdfsdf"</h1>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
@@ -23,7 +22,7 @@
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View onsdfgsdfg GitHub</a>
         </section>
       </div>
     </header>
