--- a/style.css
+++ b/style.css
@@ -383,3 +383,15 @@ a:hover {
 	width: 1000px;
 	margin: 0px auto;
 }
+
+.button {
+  color: #fff;
+  text-decoration: none;
+  background-color: #000;
+  padding: 5px 10px;
+  border-radius: 0px;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  display: inline-block;
+  cursor: pointer;
+}
